--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,10 +6,16 @@
     {
       "path": "styles.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "css/styles.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
